Revision history for Perl extension aws-lambda

{{$NEXT}}

0.0.16 2020-04-23T00:23:44Z
    - new region Africa (Cape Town) af-south-1 is available

0.0.15 2020-04-17T11:53:53Z
    - fix syntax error of POD

0.0.14 2020-04-11T11:37:43Z
    - AWS::Lambda::PSGI supports API Gateway v2 now

0.0.13 2020-03-15T00:14:09Z
    - perl 5.30.2 is released

0.0.12 2020-03-11T06:42:11Z
    - bump up AWS::XRay to 0.11

0.0.11 2019-11-13T03:04:08Z
    - perl 5.30.1 is released

0.0.10 2019-09-21T20:07:37Z
    - apply perlstrip and podstrip

0.0.9 2019-08-24T07:07:48Z
    - new region Middle East (Bahrain) me-south-1 is available

0.0.8 2019-08-22T00:01:37Z
    - minor fix of typo in the pod

0.0.7 2019-08-21T09:15:30Z
    - support XRay and AWS::XRay is pre-installed
    - AWS::Lambda::PSGI injects the lambda request id into psgix.request_id

0.0.6 2019-07-16T16:45:33Z
    - add Paws layer
    - use virtual hosted–style s3 urls instead of path style urls

0.0.5 2019-05-22T12:42:18Z
    - perl 5.30.0 is released
    - Support the AWS Asia Pacific (Hong Kong) Region (ap-east-1)

0.0.4 2019-04-20T07:09:46Z
    - perl 5.28.2 is released

0.0.3 2019-04-18T06:17:14Z
    - Added missing prereq URI::Escape as suggested by CPANTS. #13 (thx @manwar)

0.0.2 2019-04-17T07:14:14Z
    - set SCRIPT_NAME environment value (fixes #7)
    - install Plack::Middleware::ReverseProxy

0.0.1 2019-03-10T06:01:37Z
    - original version